--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 aiosqlite==0.20.0
+alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
-black==24.4.0
 click==8.1.7
 colorama==0.4.6
 databases==0.9.0
 fastapi==0.110.2
-flake8==7.0.0
 greenlet==3.0.3
 h11==0.14.0
 idna==3.7
+Mako==1.3.3
+MarkupSafe==2.1.5
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==24.0
