--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,4 +68,4 @@ jobs:
       - uses: hadolint/hadolint-action@v2.0.0
         with:
           dockerfile: Dockerfile
-          ignore: DL3008, DL3022
+          ignore: DL3008,DL3022,DL3042
